--- a/networks/networksmidsem.tex
+++ b/networks/networksmidsem.tex
@@ -121,14 +121,14 @@ that increases as $\log(n)$ or slower?
 \end{enumerate}
 
 \item 
- A network consists of a ring of n vertices, each of which is connected to the r vertices immediately
+ A network consists of a ring of n vertices, each of which is connected to the r vertices immediately.
 clockwise from it around the ring and to the r vertices immediately anticlockwise. Thus each
-vertex has degree k = 2r. You can assume that n ≫ r.
+vertex has degree k = 2r. You can assume that $n >>r$.
 (a) [2 points] How many “connected triples” are there in the network, i.e., a vertex plus an
 unordered pair of its neighbors?
 (b) [4 points] How many triangles are there in the network, i.e., trios of vertices each connected
 to both of the others?
-(c) [4 points] What is the clustering coefﬁcient of the network?
+(c) [4 points] What is the clustering coeffcient of the network?
 
 
 \end{enumerate}
