--- a/networks/networksmidsem.tex
+++ b/networks/networksmidsem.tex
@@ -67,7 +67,7 @@ is
 \begin{align*}
  x = n^2 - \sum_{i=1}^k n_i^2.
 \end{align*}
-(Hint: Recall that in a tree there is only path between pairs of edges.)
+(Hint: Recall that in a tree there is only path between pairs of vertices.)
 \item (4 points) Hence, or otherwise, calculate the betweenness centrality of the $i^{th}$ vertex from the end of a line-graph
 of $n$ vertices, i.e. when $n$ vertices are arranged in a row as follows:
 \vspace*{1.5in}
